src/App.css
:root {
    --primary: #141414;
    --secondary: #494949;

    --contours-primary: #40ca24;
    --contours-secondary: #62a1ff;

    --font-primary: #eeeeee;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif,
        'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
}

.page {
    display: flex;
    flex-direction: column;
    align-items: center;
    max-width: 100%;
    min-height: 100vh;
    background-color: var(--primary);
    color: var(--font-primary);
    padding-bottom: 48px;
}

